Pinning containers to core